重构性能测试用例的代码